--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,12 @@
 @import url('typography.css');
+@import url('navigation-bar.css');
+
+html, body {
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	scroll-behavior: smooth;
+}
