--- a/styles/index.css
+++ b/styles/index.css
@@ -33,10 +33,46 @@ body > * {
 .background-container h1,
 .background-container h2 {
 	line-height: 0;
+	color: white;
 }
 
 .background-container__title-xl {
 	display: none;
+}
+
+.experts-wrapper {
+	background-color: #f8f9fa;
+	width: 100%;
+	padding: 3rem 0;
+}
+
+	/* ************************* experts section ************************* */
+
+.experts-container {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	padding: 0 0.8rem;
+}
+
+.experts-container__title {}
+
+.experts-container__info-text {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-size: 1.2rem;
+	font-weight: 300;
+}
+
+.experts-container__image-wrapper {
+	width: 100%;
+}
+
+.experts-container__image {
+	width: 100%;
+	object-fit: cover;
 }
 
 @media screen and (min-width: 480px) {
@@ -64,6 +100,28 @@ body > * {
 		font-size: 4rem;
 		font-weight: bold;
 		margin-top: 2rem;
+	}
+
+	/* ************************* experts section ************************* */
+
+	.experts-container {
+		flex-direction: row;
+		max-width: 80rem;
+		margin-left: auto;
+		margin-right: auto;
+		align-items: center;
+		padding: 7rem 0;
+	}
+
+	.experts-container__info-text {
+		width: 50%;
+		padding: 0 2rem;
+		text-align: left;
+	}
+
+	.experts-container__image {
+		width: 33.75rem;
+		height: 33.75rem;
 	}
 
 }
