--- a/styles/typography.css
+++ b/styles/typography.css
@@ -6,11 +6,13 @@ body {
 }
 
 h1 {
+	color: #002454;
 	font-size: 3rem;
 	line-height: 2.2rem;
 }
 
 h2 {
+	color: #002454;
 	font-size: 2.4rem;
 	line-height: 2.2rem;
 }
