--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 @import url('typography.css');
+@import url('helper-classes.css');
 @import url('navigation-bar.css');
 
 html, body {
@@ -32,8 +33,8 @@ body > * {
 
 .background-container h1,
 .background-container h2 {
-	line-height: 0;
 	color: white;
+
 }
 
 .background-container__title-xl {
@@ -51,7 +52,7 @@ body > * {
 .experts-container {
 	display: flex;
 	flex-direction: column;
-	text-align: center;
+	text-align: left;
 	padding: 0 0.8rem;
 }
 
@@ -60,6 +61,7 @@ body > * {
 .experts-container__info-text {
 	display: flex;
 	flex-direction: column;
+	flex-grow: 1;
 	font-size: 1.2rem;
 	font-weight: 300;
 	justify-content: center;
@@ -197,7 +199,7 @@ body > * {
 }
 
 .recent-project-card:not(first) {
-	margin-bottom: 8px;
+	margin-bottom: 0.5rem;
 }
 
 .recent-project-card__image {
@@ -292,6 +294,7 @@ body > * {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
+	margin-top: 1.5rem;
 }
 
 .testimonial__image {
