--- a/styles/typography.css
+++ b/styles/typography.css
@@ -5,16 +5,19 @@ body {
 	font-size: 16px; /* to allow use of rem units for responsive design */
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
 	color: #002454;
+	margin: 0;
+}
+
+h1 {
 	font-size: 3rem;
-	line-height: 2.2rem;
+	/* line-height: 2.85rem; */
 }
 
 h2 {
-	color: #002454;
 	font-size: 2.4rem;
-	line-height: 2.2rem;
+	line-height: 2.85rem;
 }
 
 h3 {
