Adds scroll position animations on elements.

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 @import url('typography.css');
 @import url('helper-classes.css');
+@import url('animation-kf.css');
 @import url('navigation-bar.css');
 
 html, body {
